--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             </div>
 
             <ul id="list-container">
-                
+                <!-- <li> <i class="fa-solid fa-circle-check check-icon"></i> <span class="checked">Task 1</span></li>
+                <li> <i class="fa-regular fa-circle uncheck-icon"></i>Task 2</li>
+                <li> <i class="fa-regular fa-circle uncheck-icon"></i>Task 3</li> -->
             </ul>
 
         </div>
